refs:#1149 #1149 aligning correctly logout button

--- a/public/stylesheets/blank_JQ.css
+++ b/public/stylesheets/blank_JQ.css
@@ -290,6 +290,8 @@ h4 {
 	float:left;
 }
 
+.logoutPic{float:left!important;margin:0 5px 0 !important;}
+
 /* 		FOOTER  	*/
 
 a.search_button{
